# AlloyEval

./: .env.example  .gitignore  README.md  export_results.py  pyproject.toml  replication.ipynb  requirements.txt  run_experiment.py
alloy_replication/: __init__.py  alloy.py  analysis.py  config.py  data.py  experiment.py  guide.py  llm.py  prompts.py
data/: graph_properties.jsonl  relation_properties.jsonl
data/extended/: graph_problems.jsonl  production_line_problems.jsonl  social_network_problems.jsonl  trash_problems.jsonl
report/: generate_figures.py  report.md  report.tex
results/: by_property.csv  errors.csv  report.md  summary.csv
tests/: test_alloy.py  test_data.py  test_llm.py
